public/css/style.css
.root {
  margin: 4rem auto 0rem;
}

.error_message {
  float: left;
}

.conversation_frame {
  width: 700px;
  margin:auto;
  padding: 10px;
  height: auto;
  min-height: 90px;
  overflow: auto;

}

.reset_link {
  margin-bottom: 1em;
}

.conversation {
  width: 100%;
  border: 1px solid #c7c7c7;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  height: auto;
  min-height: 90px;
  overflow: auto;
  border-bottom: none;
}

.speaker {
  margin-top: 1em;
  margin-bottom: 1em;
  overflow: auto;
  padding: 20px;
  width: 766px;
}
.conversation_header {
  width: 100%;
  padding-left:20px;
  padding-top: 10px;
  font-size: 1.25em;
}

.statement_header {
  float: left;
  width: 77%;
}

.tone_header {
  float: left;
  margin-top: 0;
}
.consumer {
  background-color: #F5F3FA;
}

.avatar {
  float:left;
  margin-right: 1em;
  width: 70px;
}
.customer_avatar {
    background-image: url("/images/customer.png");
    height: 70px;
    background-repeat: no-repeat;
    background-size: 100%;
    border: 1px solid #c7c7c7;
    border-radius: 10px;
}

.agent_avatar {
    background-image: url("/images/agent.png");
    height: 70px;
    background-repeat: no-repeat;
    background-size: 100%;
    border: 1px solid #c7c7c7;
    border-radius: 10px;
}

.statement_container {
  float: left;
  width: 60%;
  /* border-right: 1px solid #c7c7c7; */
  /* margin-right: 15px; */
  margin-top: 0;
  min-height: 70px;
}
.speaker_name {
  font-weight: bold;
  font-size: .875em;
}
.speaker_handle {
  font-size: .875em;
}
.time_stamp {
  text-transform: uppercase;
  color: #777677;
  font-size: .75em;
}

.speaker_statement {
  overflow: hidden;
  font-size: .875em;
  margin-top: .25em;
  margin-right: 1em;
  line-height: 1.25em;
}

.score_container {
  float: left;
  width: 25%;
  margin-top: 3px;
  /* AW */
  border-left: 1px solid #c7c7c7;
  padding-left: 1rem;
}

.tone_results {
  /* display: flex; */
  display: block;
  width: 100%;
  align-items: center;
  height: 0px !important;
  /* margin-top: 0rem; */
}

.tone_text {
  float: left;
  font-size: .75em;
  /* margin-top: 0; */
  margin-top: 1em;
  padding-right: .5em;
  width: auto;
}
.tone_score {
  font-weight: bold;
  float: left;
  font-size: .75em;
  margin-top: 0;
  width: 25%;
}
.other_tones {
font-size: 0.75em;
}

.negative {
  color: #DB207C;
}
/*
.vote {
  float: right;
  margin-top: -4px;
}
.voteicon {
    margin-top: 0;
    margin-left: 1em;
}
*/

.buttons-group {
  float: right;
  margin-top: 0;
  width: auto;
  /*margin-right: .3em;*/
}

.buttons-group--button {
  border: none;
  border-radius: 0rem;
  /* padding: 0rem; */
}

.buttons-group--button_last {
  border-radius: 0rem;
  padding-right: 1rem;
}

.buttons-group--button_first {
  border-radius: 0rem;
  padding-right: 0rem;
}

.base--radio:checked+.buttons-group--button {
  background: transparent;
}

.base--radio:checked + .buttons-group--button .icon {
  fill: rgb(152, 85, 212);
}

.buttons-group--button:active {
  background: transparent;
}

.thumb {
  cursor: pointer;
  height: 15px;
}

.contribute_container {
  background-color: #f4f4f4;
  width: 100%;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border: 1px solid #c7c7c7;
  margin-top: 0;
}
.input_wrapper {
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}
textarea {
  height:70px;
  border: 1px solid #aeaeae;
  resize: none;
}

.input_area {
    width: 90%;
    float: left;
    margin-top: 0;
}
#newUtteranceTextArea:invalid {
    box-shadow: none;
}

.input_avatar {
  float:left;
  width: 35px;
  height: 35px;
  border: 1px solid #c7c7c7;
  background-color: #ffffff;
  border-radius: 5px;
  margin-right: 1em;
}
.submit_button {
  float: right;
  margin-right: 15px;
  margin-top: 20px;
}
.reset {
  float: left;
}

.json {
  float: right;
  margin-top: 0;
}
.conversation_footer {
  height: auto;
  margin-bottom: 1em;
  overflow: auto;
}

.jumbotron--header {
  margin-top: 0rem;
}

.question-input--input-container {
  display: block;
}

.alerttext {
    color: red;
}

.question-input--input {
  width: 100%;
  max-width: initial;
}

.question-input--button-container {
  display: block;
}

.question-input--submit-button {
  width: 100%;
}

.sample-questions--left {
  display: block;
}

.sample-questions--right {
  display: block;
}

.agree_container {
    float: right;
    margin-top: -20px;
    /* margin-right: -15px; */
    margin-right: 0;
}
.agree_link {
    font-size: .75em;
}

.base--a {
  cursor: pointer;
}
.service-error {
  text-align: center;
}

.service-error--image {
  margin: 2rem auto;
  width: 6.5rem;
  height: auto;
  display: block;
}

.service-error--message {
  color: #d74108;;
  text-align: center;
}

